messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-django.local   # Replace with your domain or add to /etc/hosts
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
